--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 - 👋 Hi, I’m Desire Igweze
 - 👀 I’m interested in Crypto/NFTs
 - 🌱 I’m currently learning Blockchain Technology
-- 📫 How to reach me linktr.ee/desireigweze
-Check out my address in Scopescan: 0x015e1f04f4ecb282cc0235f74dac00c01bf71884
+- 📫 How to reach me x.com/DesireIgweze
